# anilist-man

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: codeql-analysis.yml
anilist_man/: __main__.py  main.py  queries.py  queryFunc.py  query_func.py  refreshfunc.py  subFunc.py
tests/: test_anicli.py
